Closed Bug 1656731 Opened 5 years ago Closed 5 years ago

80.0b2 says 2018 MB Air not qualified for WebRender. Bug 1649528 seems to indicate that it should be

Categories

(Core :: Graphics: WebRender, defect, P3)

80 Branch
x86_64
macOS
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- wontfix
firefox81 --- fixed

People

(Reporter: yusufg, Assigned: kvark)

References

Details

Attachments

(2 files)

Hi, I'm running 80.0b2 on a 2018 Macbook Air Retina Display

I'm assuming that this build has 1649528 included in it but about:support which I've attached indicates that composting is OpenGL and that WEBRENDER_QUALIFIED: No qualified hardware

Assignee: nobody → dmalyshau
Status: NEW → ASSIGNED

on it with a simple fix

Severity: -- → S3
Priority: -- → P3
Pushed by dmalyshau@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0ab259d60811 Add Intel(R) UHD Graphics 617 to the KabyLake GT2 list r=mstange
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

The patch landed in nightly and beta is affected.
:kvark, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(dmalyshau)

(Julien Cristau [:jcristau] from bug 1657600 comment 6)

early beta for 80 is over.

Flags: needinfo?(dmalyshau)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: