Bug 1656731 - Add Intel(R) UHD Graphics 617 to the KabyLake GT2 list r=mstange

added according to Jeff's gpudb
https://github.com/jrmuizel/gpu-db/blob/a65476109aaf61603cbb187e267ca6a7cf6e5377/intel.json#L308

Differential Revision: https://phabricator.services.mozilla.com/D86381